[workspace]
members = ["fuzz"]

[package]
name = "mu_rust"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
libc = "0.2.168"
log = "0.4.25"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.3"
toml = { version = "0.8.20", features = ["parse"] }
