[package]
name = "mu_rust_fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.mu_rust]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_parse.rs"
test = false
doc = false
bench = false
